# braingraph-pipeline

./: .flake8  .gitignore  00_install.sh  00_install_old.sh  01_extract_connectome.sh  01_working_config.json  02_compute_graph_metrics.sh  03_balanced_optimizer.sh  03_optimize_metrics.sh  04_balanced_optimizer.sh  ANALYSIS_APPLY_COMMAND.md  BAYESIAN_OPTIMIZATION.md  CHANGELOG_QA_ENHANCEMENTS.md  CITATION.cff  CLEANUP_GUIDE.md  CLI_REFERENCE.md  CODE_QUALITY_FINAL.md  CODE_QUALITY_REPORT.md  CODE_QUALITY_SUMMARY.md  CONFIG_GUIDE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_NEW.md  DSI_STUDIO_COMPLETE_SOLUTION.md  DSI_STUDIO_PATH_CONFIG.md  DSI_STUDIO_PATH_RESOLUTION_FIX.md  DUPLICATE_QA_SCORES_FIX.md  FAULTY_OPTIMIZATION_FIX_LOG.md  FEATURE_BAYESIAN_OPTIMIZATION.md  FINAL_QUALITY_REPORT.md  FIXES_APPLIED.md  FIX_APPLY_COMMAND_CLEANUP.md  FIX_PRUNE_NONBEST_LOGIC.md  HEADLESS_SERVER_FIX.md  IMPLEMENTATION_CHECKLIST.md  INDEX_PREVENTION_SYSTEM.md  INSTALLATION.md  INSTALLATION_CHANGES.md  INSTALLATION_GUIDE.md  INTEGRITY_CHECKS.md  (+71 more)
.github/instructions/: global.md.instructions.md  opticonn.instructions.md
.github/workflows/: experimental-monolith.yml
bootstrap_configs/: bootstrap_master_config.json
configs/: 01_working_config.json  bootstrap_optimization_config.json  bootstrap_qa_wave_1.json  bootstrap_qa_wave_2.json  braingraph_default_config.json  dsi_studio_config_schema.json  production_config.json  qa_scoring_enhanced.py  quick_test_sweep.json  quick_validation_config.json  sweep_config.json  sweep_micro.json  sweep_nano.json  sweep_probe.json  sweep_production_full.json  sweep_ultra_minimal.json  test_config.json  test_extraction_only.json  test_full_pipeline.json  test_mini_pipeline.json  test_step02_only.json  test_step03_only.json  user_friendly_sweep.json
cross_validation_configs/: bootstrap_master_config.json
docs/: ENHANCED_BOOTSTRAP_WORKFLOW.md  SIMPLIFIED_WORKFLOW.md
dsi_studio_tools/: example_config.json  extract_connectivity_matrices.py  utils.py  validate_setup.py
experimental/monolith_refactor/: README.md  analysis_monolith.py  pyproject.toml
experimental/monolith_refactor/tests/: test_smoke.py
scripts/: aggregate_network_measures.py  aggregate_wave_candidates.py  bayesian_optimizer.py  bootstrap_qa_validator.py  check_script_compliance.py  cross_validation_bootstrap_optimizer.py  extract_connectivity_matrices.py  json_validator.py  metric_optimizer.py  opticonn_hub.py  optimal_selection.py  pareto_view.py  pre_test_validation.py  qa_cross_validator.py  quality_checks.py  quick_quality_check.py  run_parameter_sweep.py  run_pipeline.md  run_pipeline.py  sensitivity_analyzer.py  statistical_analysis.py  statistical_metric_comparator.py  sweep_utils.py  test_integrity_checks.py  validate_setup.py  verify_parameter_uniqueness.py
scripts/dash_app/: app.py
scripts/subcommands/: apply.py  find_optimal_parameters.py  review.py  sensitivity.py
scripts/test/: test_braingraph_features.py  test_enhanced_conversion.py
scripts/utils/: aggregate_wave_candidates.py  json_validator.py  pareto_view.py  quick_quality_check.py  runtime.py  sweep_utils.py  validate_setup.py
studies/soccer_122_optimization/soccer_122_full_bootstrap_configs/: bootstrap_qa_wave_1.json  bootstrap_qa_wave_2.json
