[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opticonn"
version = "0.1.0"
description = "OptiConn: Unbiased, modality-agnostic connectomics optimization and selection"
readme = "README.md"
authors = [
  { name = "Karl Koschutnig" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["connectomics", "neuroimaging", "optimization", "QA", "tractography"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "networkx",
  "matplotlib",
  "seaborn",
  "nibabel",
  "nilearn",
  "statsmodels",
  "pingouin",
  "jsonschema",
]

[project.urls]
Homepage = "https://github.com/MRI-Lab-Graz/braingraph-pipeline"
Issues = "https://github.com/MRI-Lab-Graz/braingraph-pipeline/issues"

[project.scripts]
opticonn = "scripts.opticonn_hub:main"

[project.optional-dependencies]
# Development and analysis extras used by optional scripts and notebooks
dev = [
  "tqdm>=4.60.0",
  "scikit-learn>=1.2.0",
  "scikit-posthocs>=0.7.0",
  "plotly>=5.0.0",
  "dash>=2.0.0",
  "jupyter>=1.0.0",
  "ipywidgets>=8.0.0",
  "openpyxl>=3.0.0",
  "xlsxwriter>=3.0.0",
  "h5py>=3.0.0",
  "dipy>=1.5.0",
]

# Bayesian optimization features (NEW)
bayesian = [
  "scikit-optimize>=0.9.0",
]

[tool.setuptools]
packages = ["scripts"]
