[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opticonn"
version = "0.1.0"
description = "OptiConn: Unbiased, modality-agnostic connectomics optimization and selection"
readme = "README.md"
authors = [
  { name = "Karl Koschutnig" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["connectomics", "neuroimaging", "optimization", "QA", "tractography"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "networkx",
  "matplotlib",
  "seaborn",
  "statsmodels",
  "jsonschema",
  "scikit-optimize",
  "scikit-learn",
  "tqdm",
]

[project.urls]
Homepage = "https://github.com/MRI-Lab-Graz/braingraph-pipeline"
Issues = "https://github.com/MRI-Lab-Graz/braingraph-pipeline/issues"

[project.scripts]
opticonn = "scripts.opticonn_hub:main"

[project.optional-dependencies]
# Development extras: optional packages for advanced analysis and notebooks
dev = [
  "jupyter>=1.0.0",
  "ipywidgets>=8.0.0",
  "dipy>=1.5.0",
  "nibabel>=5.0.0",
  "nilearn>=0.9.0",
  "openpyxl>=3.0.0",
  "xlsxwriter>=3.0.0",
]

[tool.setuptools]
packages = ["scripts"]
